2002-12-25
  Slight changes to macros.html to make it look like the rest of the cookbook
  Added initial entry for macros.html to CHANGELOG
  Added new chapter 'Miscellaneous'
  Linked misc.html from index.html
  Added section 'Re-using complex data structures' (orginally by Marco Antoniotti) to 'Miscellaneous'
  Added section 'Using ADJUST-ARRAY instead of consing up...' (originally by Pierpaolo Bernardi) to 'Miscellaneous'
  Added Marco Antoniotti and Pierpaolo Bernardi to the list of contributors
  Added Pascal Constanza's guide to link section
  Added Mark Watson's book to link section

2002-10-22
  Updated windows.html and .emacs by Bill Clementson to revert to Corman Lisp 1.5 due to problems with running clconsole.exe inside of emacs in version 2.0.

2002-10-21
  Updated windows.html and .emacs by Bill Clementson to add support for Corman Lisp 2.0, removed instructions for the w3 utility (not necessary for viewing documentation) and provide support in .emacs for auto-detecting which lisp implementations have been installed.

2002-10-15
  Updated windows.html by Bill Clementson to include instructions to change lisp-used, EMACSDIR & ILISPDIR variables.

2002-09-23
  Updated windows.html and .emacs by Bill Clementson to support CLISP v2.30.

2002-09-22
  Updated .emacs by Bill Clementson to add generic eval-last-sexp support on C-x C-e for elisp & inferior lisps.

2002-09-08
  New chapter macros.html by Drew McDermott

2002-09-03
  Updated windows.html to adjust location of environmental variable instructions.
	
2002-08-29
  Updated windows.html and .emacs by Bill Clementson to not show separate ACL listener window on startup.

2002-08-29
  Updated windows.html and .emacs by Bill Clementson as follows:	
    1. Changes for ACL6.2 (use alisp.exe instead of allegro-ansi.exe due to heap size limitations in trial edition).
    2. Eliminate clisp-indent.el from setup to eliminate need to modify .emacs if clisp isn't installed.

2002-08-20