@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/license.html,v 1.3 2002/05/21 23:16:50 nhabedi Exp $	 -->
+<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/license.html,v 1.4 2002/05/21 23:24:52 nhabedi Exp $	 -->
 <html> <head>
 <title>The Common Lisp Cookbook - License</title>
 <style type="text/css">
@@ -15,10 +15,10 @@ Redistribution and use of the &quot;Common Lisp Cookbook&quot; in its orginal fo
 <UL>
 <LI>Redistributions must reproduce the above copyright notice, this condition and the following disclaimer in the document itself and/or other materials provided with the distribution.
 </UL>
-<b>IMPORTANT:</b> This document is provided by the Common Lisp Cookbook Project &quot;as is&quot; and any express or implied warranties, including, but not limited to, the implied warranties of merchantability and fitness for a particular purpose are disclaimed. In no event shall the Common Lisp Cookbook Project be liable for any direct, indirect, incidental, special, exemplary, or consequential damages (including, but not limited to, procurement of substitute goods or services; loss of use, data, or profits; or business interruption) however caused and on any theory of liability, whether in contract, strict liability, or tort (including negligence or otherwise) arising in any way out of the use of this documentation, even if advised of the possibility of such damage.
+<b>IMPORTANT:</b> This document is provided by the Common Lisp Cookbook Project &quot;as is&quot; and any expressed or implied warranties, including, but not limited to, the implied warranties of merchantability and fitness for a particular purpose are disclaimed. In no event shall the Common Lisp Cookbook Project be liable for any direct, indirect, incidental, special, exemplary, or consequential damages (including, but not limited to, procurement of substitute goods or services; loss of use, data, or profits; or business interruption) however caused and on any theory of liability, whether in contract, strict liability, or tort (including negligence or otherwise) arising in any way out of the use of this documentation, even if advised of the possibility of such damage.
 
 <hr>
 Copyright &copy; 2002 The Common Lisp Cookbook Project
 <address>http://cl-cookbook.sourceforge.net/</address>
-<br>$Header: $
+<br>$Header: /cvsroot/cl-cookbook/cl-cookbook/license.html,v 1.4 2002/05/21 23:24:52 nhabedi Exp $
 </body> </html>
